@startuml er_puml

entity repositories {
    + id [PK]
    + name [UQ]
    --
    + description
    + config
    + created_at
    + updated_at
}

entity snapshots {
    + id [PK]
    + repository_id [FK]
    --
      parent_id [FK, self]
    + message
    + metadata
      source_machine_id
      source_snapshot_id
    + created_at
}

snapshots }o--|| repositories
snapshots }o--o| snapshots : parent

entity blobs {
    + id [PK]
    + digest [UQ]
    --
    + size
    + fast_digest
    + created_at
}

entity entries {
    + id [PK]
    + snapshot_id [FK]
    --
    + path
    + status
      blob_id [FK]
      mode
      mtime
    + created_at
}

entries }o--|| snapshots
entries }o--o| blobs

entity entry_cache {
    + repository_id [PK.1, FK]
    + path [PK.2]
    --
    + snapshot_id [FK]
    + entry_id [FK]
    + status
      blob_id
      mtime
      digest
      size
      fast_digest
    + updated_at
}

entry_cache }o--|| repositories
entry_cache }o--|| snapshots
entry_cache }o--|| entries

entity stores {
    + id [PK]
    + name [UQ]
    --
    + url
    + config
    + created_at
    + updated_at
}

entity replicas {
    + id [PK]
    + blob_id [FK]
    + store_id [FK]
    --
    + path
    + encrypted
      verified_at
    + created_at
}

replicas }o--|| blobs
replicas }o--|| stores

entity tags {
    + id [PK]
    + blob_id [FK]
    --
    + key
      value
    + created_at
}

tags }o--|| blobs

entity sync_peers {
    + id [PK]
    + repository_id [FK]
    --
    + name
    + url
      last_synced_at
      last_snapshot_id
    + config
    + created_at
    + updated_at
}

sync_peers }o--|| repositories

entity machines {
    + machine_id [PK]
    --
    + name
    + description
      last_seen_at
    + created_at
}

@enduml
